--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10937,3 +10937,13 @@ section.user_info h1 {
   border-radius: 50%;
 }
 
+.gravatar-edit {
+  margin: 15px auto;
+  text-align: center;
+}
+
+.gravatar-edit .gravatar {
+  float: none;
+  max-width: 100px;
+}
+
